Merge remote-tracking branch 'origin/master'
Conflicts:
	release/tcpProxy.sh
	src/main/java/com/lubin/tcpproxy/ProxyFrontendHandler.java